--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
         <title>Test Page</title>
         <link rel = "shortcut icon" type = "image/ico" href="img/favicon.ico"/>
         <link href = "https://fonts.googleapis.com/css?family=Oswald|Raleway" rel = "stylesheet">
-        <script defer src = "https://use.fontawesome.com/releases/v5.05.0.6/js/all.js"></script>
+        <script defer src = "https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
         <!--<link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">-->
         <link rel = "stylesheet" href = "styles.css">
     </head>
     <body>
         <p> testing out body of text</p>
+        <footer>
+            <ul>
+                <li><a href = "#"  target = "_blank"><i class = "fab fa-twitter-square"></i></a></li>
+                <li><a href = "#"  target = "_blank"><i class = "fab fa-facebook-square"></i></a></li>
+                <li><a href = "#"  target = "_blank"><i class = "fab fa-youtube-square"></i></a></li>
+                <li><a href = "#"  target = "_blank"><i class = "fab fa-pinterest-square"></i></a></li>
+            </ul>
+            <p>&copy; <script>document.write(new Date().getFullYear());</script> It sure is fun to create websites</p>
+            <p>"Tell me and I Forget, teach me and blah blah"</p>
+                </footer>
     </body>
 </html>
