--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
     <ul class="grid">
       <li>
       	<a href="https://github.com/Rikkor/cs313-php/tree/master/web/project1" target="_blank"><img src="https://img.icons8.com/color/48/000000/github--v1.png"></i></a>
-      	<a href="" target="_blank"><img src="https://img.icons8.com/color/48/000000/image.png"></i></a>
         <h4>Macro App "Mac Attack"</h4>
         <p>This is an app that was created in Android Studio using Java. A user can log into their Dropbox via the app, and can send macros<br><br>
         	from the app to any computer that is logged into their Dropbox. It uses a combination of Dropbox API along with Autohotkey to accomplish this.</p>
@@ -61,7 +60,7 @@
       <li>
       	<a href="https://dry-spire-10271.herokuapp.com/web/project1/home.php" target="_blank"><img src="https://img.icons8.com/color/48/000000/heroku.png"></i></a>
       	<a href="https://github.com/Rikkor/cs313-php/tree/master/web/project1" target="_blank"><img src="https://img.icons8.com/color/48/000000/github--v1.png"></i></a>
-      	<a href="" target="_blank"><img src="https://img.icons8.com/color/48/000000/image.png"></i></a>
+      	<a href="img/sk.png" target="_blank"><img src="https://img.icons8.com/color/48/000000/image.png"></i></a>
         <h4>PHP-Based Storefront</h4>
         <p>This was a page I did for school, but exercised a lot of creativity on. We were supposed to design a page with loose directions using PHP.<br><br>
         	It uses a live database (PostgreSQL) via Heroku and has a fully working login/registration system.</p>
@@ -69,7 +68,7 @@
       <li>
       	<a href="https://rikkor.github.io/CIT261/assignment6.html" target="_blank"><img src="https://img.icons8.com/color/48/000000/web.png"></i></a>
       	<a href="https://github.com/Rikkor/CIT261/blob/master/assignment6.html" target="_blank"><img src="https://img.icons8.com/color/48/000000/github--v1.png"></i></a>
-      	<a href="" target="_blank"><img src="https://img.icons8.com/color/48/000000/image.png"></i></a>
+      	<a href="img/sb.png" target="_blank"><img src="https://img.icons8.com/color/48/000000/image.png"></i></a>
         <h4>Javascript Soundboard</h4>
         <p>While this was a school assignment, it's something I'm very proud of. We were asked to use Javascript events, and a few other topics. <br><br>
         	This could be done with multiple websites or with one using a combination of the, for a total of 13 topics. I made this soundboard completely
