--- a/index.html
+++ b/index.html
@@ -101,12 +101,16 @@
     <div id="two-cols">
       <div class="about-img"><img src="img/me.jpg" alt="thumbs up"></div>
       <div class="about-bio">
-        <p>Hey there~! My name is Eric Brich and I am currently a student at BYU-I (Brigham Young University - Idaho) just about to finish up my studies. 
-        I'm studying to get a bachelors in Software Engineering.<br>
+        <p>Hey there~! My name is Eric Brich and I am currently a student at BYU-I (Brigham Young University - Idaho). 
+        I'm studying to get a bachelors in Software Engineering.I've just about finished my studies and I am actively looking for work.<br>
         <br>Aspiring developer. Looking to get into software or web development. I do game developing on the side as a hobby with my younger brother. I love
         working on software and web apps!<br>
         <br>I am a fan of video games, reading, skateboarding and technology. Always looking for ways I can think outside the box and come up with creative solutions
-    	for life's daily problems in programming and everything else.<br>
+    	  for life's daily problems in programming and everything else.<br>
+
+        <br>Please check out my 
+        <a href="https://www.linkedin.com/in/ericbrich" style="color:blue">Linkedin</a>
+         for any contact information or for more about me. <br>
     	<br>Skilled in CSS, HTML, Javascript, Node.js, C++, Java & PHP</p>
       </div>
       <p>&nbsp;</p>
@@ -120,7 +124,7 @@
     </ul>
     <p>&ldquo;It's not a question of can or can't...in life there are some things you just do&rdquo; &mdash;
     Claire Farron 'Lightning'</p>
-    <p>&copy; <script>document.write(new Date().getFullYear())</script></p>
+    <p>&copy; Eric Brich <script>document.write(new Date().getFullYear())</script></p>
   </footer>
   <script type="text/javascript">
     $(document).ready(function() {
