Clean-up & Polish
Cleaning up some useless code and polishing

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
   </header>
   <!-- ******************************** -->
-  <div id="hero">
+  <div id="splash">
     <div class="background-image"></div>
     <h1>Programming Portfolio<br>Eric Brich</h1>
 
@@ -44,7 +44,7 @@
     </ul>
   </div>
   <!-- ******************************** -->
-  <div id="getting-around">
+  <div id="projects">
   	<hr>
     <h3 class="title">Projects</h3>
     <p>Here are some of the more notable projects I have worked on. Please click on the icons to see more about that project. <br>
