--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     Claire Farron 'Lightning'</p>
     <p>&copy; Eric Brich <script>document.write(new Date().getFullYear())</script></p>
   </footer>
-  <script type="text/javascript">
+  <!--<script type="text/javascript">
     $(document).ready(function() {
       $('a[href^="#"]').on('click', function(e) {
         e.preventDefault();
@@ -140,7 +140,22 @@
           window.location.hash = target - 100;
         });
       });
+    });-->
+  </script>
+  <script type="text/javascript">
+  $(document).ready(function(){
+    $('a[href^="#"]').on('click',function (e) {e.preventDefault();
+
+    var target = this.hash;
+    var $target = $(target);
+
+    $('html, body').stop().animate({
+          'scrollTop': $target.offset().top
+    }, 900, 'swing', function () {
+          window.location.hash = target;
     });
+         });
+  });
   </script>
   
 </body>
