--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
           window.location.hash = target - 100;
         });
       });
-    });-->
-  </script>
+    });
+  </script>-->
   <script type="text/javascript">
   $(document).ready(function(){
     $('a[href^="#"]').on('click',function (e) {e.preventDefault();
