--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   <div id="projects">
   	<hr>
     <h3 class="title">Projects</h3>
-    <p>Here are some of the more notable projects I have worked on. Please click on the icons to see more about that project. <br>
+    <p>Here are some of the more notable projects I have worked on.<br>
+      <br><b><strong>***Please click on the icons to see more about that project.***</strong></b><br>
     	<br>There are icons for github, heroku, site previews and an image to help you see what the projects look like.
     </p><br>
     <ul class="grid">
