--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       </li>
       <li>
       	<a href="https://rikkor.github.io/CIT261/final_project/studioGhibli.html" target="_blank"><img src="https://img.icons8.com/color/48/000000/web.png"></i></a>
+      	<a href="https://github.com/Rikkor/CIT261/blob/master/final_project/studioGhibli.html" target="_blank"><img src="https://img.icons8.com/color/48/000000/github--v1.png"></i></a>
       	<a href="img/sg.png" target="_blank"><img src="https://img.icons8.com/color/48/000000/image.png"></i></a>
         <h4>Studio Ghibli Fan Site</h4>
         <p>I made this site as a final project for my web development class, but there were no other guidelines besides using an API and somehow 
